--- a/i18n/lifterlms-blocks.pot
+++ b/i18n/lifterlms-blocks.pot
@@ -2,16 +2,16 @@
 # This file is distributed under the GPLv3.
 msgid ""
 msgstr ""
-"Project-Id-Version: LifterLMS Blocks 2.5.3\n"
+"Project-Id-Version: LifterLMS Blocks 2.5.4\n"
 "Report-Msgid-Bugs-To: https://lifterlms.com/my-account/my-tickets\n"
 "Last-Translator: Team LifterLMS <team@lifterlms.com>\n"
 "Language-Team: Team LifterLMS <team@lifterlms.com>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"POT-Creation-Date: 2024-04-17T14:28:07+00:00\n"
+"POT-Creation-Date: 2024-04-25T16:55:53+00:00\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"X-Generator: llms/dev 0.0.4-alpha.0\n"
+"X-Generator: llms/dev 0.2.1\n"
 "X-Domain: lifterlms\n"
 
 #. Plugin Name of the plugin
